--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles.css" />
     <title>Guess My Number!</title>
+
+    <link rel="icon" href="favicon.ico" />
   </head>
+
   <body>
     <header>
       <h1>Guess My Number!</h1>
@@ -16,7 +19,7 @@
     </header>
     <main>
       <section class="left">
-        <p class = 'guesses'>Previous Guess: </p>
+        <p class="guesses">Previous Guess:</p>
         <input type="number" class="guess" />
         <button class="btn check">Check!</button>
       </section>
